<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title">Title:&#32;</string>
    <string name="hint">Avengers: Age of Ultron</string>
    <string name="votes">Total Votes:&#32;</string>
    <string name="numberhint">1000</string>
    <string name="avg">Average Rating:&#32;</string>
    <string name="ow">Overview:&#32;</string>
    <string name="release">Release Date:&#32;</string>
    <string name="errormsg">Error getting the data</string>
    <string name="orderby">Order By</string>
    <string name="mostpop">Most Popular</string>
    <string name="toprate">Top Rated</string>
    <string name="novideos">No Videos Found..</string>
    <string name="videos">Videos:</string>
    <string name="reviews">Reviews:</string>
    <string name="noreviews">No Reviews Found..</string>
    <string name="reviewer">Reviewer: </string>
    <string name="favorite">Favorites</string>
    <string name="nointernet">No internet connection!</string>
    <string name="retry">RETRY</string>
</resources>
